--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
 
 :root {
-  --primary-color: #262225;
-  --main-text: #353134;
+  --darkest-text: #1a2130;
+  --dark-text: #2c3853;
+  --light-gray: #62626264;
   --bright-color: #efefef;
   --secondary-color: #d3c69f;
-  --background-color: #f2cf66;
+  --background-color: #83b4ff;
 }
 
 .quicksand-semibold {
@@ -16,13 +17,13 @@
 }
 
 body {
-  background: linear-gradient(to top, #f2cf66, #f2e2b0);
-  height: 100vh;
+  background: linear-gradient(to top, #e2ffe3, var(--background-color));
   margin: 0;
   padding: 0;
 }
 
 #main-container {
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,7 +36,7 @@ body {
   align-items: center;
   font-family: "Quicksand", sans-serif;
   font-weight: 900;
-  color: var(--primary-color);
+  color: var(--darkest-text);
   padding: 30px;
   font-size: 3rem;
 }
@@ -53,9 +54,10 @@ body {
   font-family: "Quicksand", sans-serif;
   font-size: 1.5rem;
   font-weight: 600;
-  color: var(--main-text);
+  color: var(--dark-text);
   padding: 3px 15px;
   background-color: var(--bright-color);
+  box-shadow: 1px 1px 3px rgba(27, 27, 27, 0.232);
   width: 100%;
   border: none;
   border-radius: 10px;
@@ -65,16 +67,17 @@ body {
 .submitBtn {
   border: none;
   background-color: var(--bright-color);
-  padding: 5px;
+  box-shadow: 1px 1px 3px rgba(27, 27, 27, 0.232);
+  padding: 8px;
   border-radius: 50%;
 }
 
 .submitBtn:hover {
   border: none;
   background-color: var(--background-color);
-  padding: 5px;
   border-radius: 50%;
   cursor: pointer;
+  transition: 0.3s ease-in-out;
 }
 
 .degrees-container {
@@ -90,34 +93,98 @@ body {
 .farenheit-btn,
 .celsius-btn {
   font-family: "Quicksand", sans-serif;
-  font-size: 1.5rem;
-  font-weight: 600;
-  color: var(--main-text);
+  font-size: 1rem;
   font-weight: 700;
-  background-color: var(--background-color);
+  color: var(--light-gray);
   border: none;
   padding: 10px;
 }
 
-.farenheit-btn:hover,
-.celsius-btn:hover {
-  font-weight: 700;
+.active {
+  color: var(--dark-text);
+  transition: 0.3s;
+}
+
+.metric-toggle {
+  width: 40px;
+  height: 20px;
   background-color: var(--bright-color);
-  border: none;
-  padding: 10px;
-  border-radius: 50%;
+  display: block;
+  border-radius: 10px;
   cursor: pointer;
+  position: relative;
+}
+
+.circle {
+  position: absolute;
+  left: 0px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  margin: 4px;
+  background-color: var(--background-color);
+  transition: 0.3s;
+}
+
+input[type="checkbox"] {
+  display: none;
 }
 
 .weather-container {
-  width: 40%;
+  width: 50%;
   margin-top: 50px;
   padding: 50px;
   border-radius: 3rem;
   background-color: rgba(255, 255, 255, 0.232);
+  box-shadow: 1px 1px 13px rgba(27, 27, 27, 0.056);
   font-family: "Quicksand";
-  color: var(--main-text);
+  color: var(--dark-text);
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr 2fr;
+  grid-template-rows: 1fr 3fr;
+}
+
+.location-info-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.location-header {
+  font-size: 2rem;
+  font-weight: 700;
+  margin: 0;
+}
+
+.location-country {
+  margin: 0;
+  font-size: 0.9rem;
+}
+
+.conditions-container {
+  margin: 0;
+  padding-top: 20px;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  justify-items: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.conditions-container p {
+  margin: 0;
+}
+
+.temp-text {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.conditions-text-container {
+  text-align: center;
+  font-size: 2rem;
+}
+
+.conditions-details-container {
+  text-align: right;
+  font-size: 0.9rem;
+  line-height: 2rem;
 }
