--- a/src/styles.css
+++ b/src/styles.css
@@ -135,6 +135,10 @@ input[type="checkbox"] {
   display: none;
 }
 
+::placeholder {
+  opacity: 0.3;
+}
+
 .weather-container {
   width: 50%;
   min-width: 475px;
@@ -189,8 +193,15 @@ input[type="checkbox"] {
   font-size: 2rem;
 }
 
+.max-min-temp-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
 .max-min-temp {
   font-size: 1rem;
+  font-weight: 500;
   padding-top: 12px;
 }
 
@@ -205,6 +216,36 @@ input[type="checkbox"] {
   font-size: 0.9rem;
   font-weight: 600;
   text-align: right;
+}
+
+.forecast-container {
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #1a213015;
+  border-radius: 1rem;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-items: center;
+}
+
+.forecast-date,
+.forecast-condition {
+  font-size: 0.7rem;
+  font-weight: 600;
+}
+
+.forecast-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.forecast-icon {
+  width: 40px;
+}
+
+.forecast-temp {
+  font-weight: 600;
 }
 
 /* Night Mode */
