--- a/src/styles.css
+++ b/src/styles.css
@@ -43,7 +43,7 @@ body {
 
 .header {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   font-family: "Quicksand", sans-serif;
